[gd_scene load_steps=8 format=2]

[ext_resource path="res://AldotheApache.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Platinum Sign.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Scripts/Interface.gd" type="Script" id=3]


[sub_resource type="DynamicFont" id=1]
size = 96
extra_spacing_top = -1
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
size = 48
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=2]
size = 48
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=3]
size = 44
font_data = ExtResource( 1 )

[node name="Interface" type="CanvasLayer"]
script = ExtResource( 3 )

[node name="ScoreLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -24.004
margin_right = 24.0
margin_bottom = 118.26
grow_horizontal = 2
custom_fonts/font = SubResource( 1 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LevelUpLabel" type="Label" parent="."]
visible = false
anchor_left = 0.5
anchor_right = 0.5
margin_left = -69.0
margin_top = 96.0
margin_right = 69.0
margin_bottom = 188.0
grow_horizontal = 2
custom_fonts/font = SubResource( 4 )
text = "LEVEL 0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.4
anchor_right = 0.5
anchor_bottom = 0.4
margin_left = -385.0
margin_top = -76.0
margin_right = 385.0
margin_bottom = 44.0001
custom_fonts/font = SubResource( 2 )
text = "SPACE DEMO"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -175.0
margin_top = -125.0
margin_right = 175.0
margin_bottom = -50.0
custom_fonts/font = SubResource( 3 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="LevelUpLabelTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true
[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="timeout" from="LevelUpLabelTimer" to="." method="_on_LevelUpLabelTimer_timeout"]
